# pyproject.toml for the gtopt Python scripts sub-package.
#
# This file makes the scripts/ directory independently installable:
#
#   pip install ./scripts          # production install from repo root
#   pip install -e ./scripts       # editable install from repo root
#   pip install -e .               # editable install from inside scripts/
#
# The console-script entry-points (gtopt-compare, cvs2parquet, gtopt-diagram,
# igtopt, plp2gtopt, pp2gtopt, ts2gtopt) are registered here so they land on
# PATH alongside the gtopt binary.

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtopt-scripts"
version = "1.0.0"
description = "gtopt conversion, diagram and utility scripts (gtopt-compare, cvs2parquet, gtopt-diagram, igtopt, plp2gtopt, pp2gtopt, ts2gtopt)"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.26.0,<2.4",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0,<3.0",
    "pandapower>=2.13.0",
    "pyarrow>=12.0.0",
]

[project.scripts]
gtopt-compare        = "gtopt_compare.main:main"
cvs2parquet          = "cvs2parquet.cvs2parquet:main"
gtopt-diagram        = "gtopt_diagram:main"
igtopt               = "igtopt.igtopt:main"
make-igtopt-template = "make_igtopt_template:main"
plp2gtopt            = "plp2gtopt.main:main"
pp2gtopt             = "pp2gtopt.main:main"
ts2gtopt             = "ts2gtopt.main:main"
sddp-monitor         = "sddp_monitor:main"


[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.6",
    "mypy>=1.15",
    "pylint>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.0",
    "ruff>=0.15",
]
diagram = [
    "graphviz>=0.20",
    "pyvis>=0.3",
    "cairosvg>=2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gtopt_compare*", "cvs2parquet*", "igtopt*", "plp2gtopt*", "pp2gtopt*", "ts2gtopt*"]

[tool.setuptools]
py-modules = ["gtopt_diagram", "gtopt_field_extractor", "make_igtopt_template", "sddp_monitor"]


# ---------------------------------------------------------------------------
# Tool configuration (mirrors root pyproject.toml, scoped to scripts/)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = [
    "gtopt_compare/tests",
    "cvs2parquet/tests",
    "gtopt_diagram_tests",
    "igtopt/tests",
    "plp2gtopt/tests",
    "pp2gtopt/tests",
    "ts2gtopt/tests",
]
addopts = "-v --import-mode=importlib -n 0"
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that use sample PLP case files",
]

[tool.coverage.run]
source = ["gtopt_compare", "cvs2parquet", "igtopt", "plp2gtopt", "pp2gtopt", "ts2gtopt"]
omit = ["*/test*", "*/tests/*", "*/__pycache__/*", "*/venv/*", "gtopt_diagram.py", "gtopt_field_extractor.py", "make_igtopt_template.py"]

[tool.coverage.report]
show_missing = true
precision = 1
fail_under = 83
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
]

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["gtopt_compare", "cvs2parquet", "gtopt_diagram", "igtopt", "plp2gtopt", "pp2gtopt", "ts2gtopt"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pylint.main]
# No additional main settings needed

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 12
max-locals = 25
max-branches = 16
max-statements = 60
max-attributes = 10
max-positional-arguments = 12

[tool.pylint."messages control"]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error",
    # pytest fixtures naturally shadow outer-scope names
    "redefined-outer-name",
    # global statement used deliberately for json_indent/json_separators
    "global-statement",
    # test helpers legitimately use implicit string concatenation for data
    "implicit-str-concat",
    # too-many-positional-arguments covered by max-args above
    "too-many-positional-arguments",
    # duplicate-code is noisy for test boilerplate and shared CLI argument patterns
    "duplicate-code",
    # protected-access is intentional in test helpers that set up internal state
    "protected-access",
    # optional-dependency imports (graphviz, pyvis, cairosvg) are intentionally
    # deferred to the functions that need them so the package works without them
    "import-outside-toplevel",
    # complex rendering/conversion functions in gtopt_diagram.py and plp2gtopt:
    # these match the thresholds already disabled in the root .pylintrc
    "too-many-statements",
    "too-many-locals",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-nested-blocks",
    "invalid-name",
    "too-many-lines",
    "too-many-instance-attributes",
    "too-many-public-methods",
    # tol_lmp is part of a uniform comparison-function API; some implementations
    # don't need it (e.g. 1-bus or battery cases without bus LMPs)
    "unused-argument",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
exclude = ["tests/"]
