# pyproject.toml for the gtopt Python scripts sub-package.
#
# This file makes the scripts/ directory independently installable:
#
#   pip install ./scripts          # production install from repo root
#   pip install -e ./scripts       # editable install from repo root
#   pip install -e .               # editable install from inside scripts/
#
# The console-script entry-points (gtopt_compare, cvs2parquet, gtopt_diagram,
# igtopt, plp2gtopt, pp2gtopt, ts2gtopt) are registered here so they land on
# PATH alongside the gtopt binary.

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtopt-scripts"
version = "1.0.0"
description = "gtopt conversion, diagram and utility scripts (gtopt_compare, cvs2parquet, gtopt_diagram, gtopt_check_lp, gtopt_check_json, gtopt_check_fingerprint, gtopt2pp, igtopt, plp2gtopt, pp2gtopt, ts2gtopt)"
requires-python = ">=3.8"
dependencies = [
    "cairosvg>=2.7",
    "graphviz>=0.20",
    "numpy>=1.26.0,<2.4",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0,<3.0",
    "pandapower>=2.13.0",
    "pyarrow>=12.0.0",
    "pyvis>=0.3",
    "rich>=13.0",
    "zstandard>=0.22.0",
    "lz4>=4.0.0",
    "jinja2>=3.1",
    "requests>=2.31",
]

[project.scripts]
gtopt_build_seed = "gtopt_warmstart.build_full_seed:main"
gtopt_compare         = "gtopt_compare.main:main"
cvs2parquet           = "cvs2parquet.cvs2parquet:main"
gtopt_diagram         = "gtopt_diagram:main"
gtopt_field_extractor = "gtopt_field_extractor:main"
gtopt_check_lp        = "gtopt_check_lp.gtopt_check_lp:main"
gtopt_compress_lp     = "gtopt_compress_lp.gtopt_compress_lp:main"
igtopt                = "igtopt.igtopt:main"
plp2gtopt             = "plp2gtopt.main:main"
pp2gtopt              = "pp2gtopt.main:main"
plexos2gtopt          = "plexos2gtopt.main:main"
sddp2gtopt            = "sddp2gtopt.main:main"
psse2gtopt            = "psse2gtopt.main:main"
gtopt2pp              = "gtopt2pp.main:main"
gtopt_check_json      = "gtopt_check_json.gtopt_check_json:main"
gtopt_check_topology  = "gtopt_check_topology.main:main"
gtopt_monitor         = "gtopt_monitor:main"
sddp_monitor          = "gtopt_monitor:main"
ts2gtopt              = "ts2gtopt.main:main"
run_gtopt             = "run_gtopt.main:main"
gtopt_check_output    = "gtopt_check_output.main:main"
gtopt_check_solvers   = "gtopt_check_solvers.gtopt_check_solvers:main"
gtopt_check_pampl     = "gtopt_check_pampl.gtopt_check_pampl:main"
gtopt_check_fingerprint  = "gtopt_check_fingerprint._cli:main"
plp_compress_case     = "plp_compress_case.main:main"
plexos_compress_case  = "plexos_compress_case.main:main"
gtopt_expand          = "gtopt_expand.cli:main"
gtopt_irrigation      = "gtopt_expand.cli:main"  # deprecated alias
cen_demanda           = "cen_demanda.main:main"
gtopt_results_summary = "gtopt_results_summary.main:main"
gtopt2pbi             = "gtopt2pbi.main:main"
gtopt_timeseries_export = "gtopt_timeseries_export.main:main"
gtopt-marginal-units  = "gtopt_marginal_units.main:cli"
cen2gtopt             = "cen2gtopt.main:cli"
cen2gtopt-marginal-units   = "cen2gtopt.marginal_units:main"
cen2gtopt-marginal-period  = "cen2gtopt.marginal_period:main"
cen2gtopt-buses            = "cen2gtopt.buses:main"
cen2gtopt-cache            = "cen2gtopt.cache:main"
cen2gtopt-pcp-archive      = "cen2gtopt.pcp_archive:main"
cen2gtopt-pcp-inputs       = "cen2gtopt.pcp_inputs:main"
cen2gtopt-pcp-validate     = "cen2gtopt.pcp_validate:main"
cen2gtopt-pcp-solution     = "cen2gtopt.pcp_solution:main"
gtopt-net                  = "gtopt_reduce_network.main:main"
sienna_to_gtopt            = "sienna_to_gtopt.__main__:main"


[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.6",
    "mypy>=1.15",
    "pylint>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.0",
    "ruff>=0.15",
    "xlsxwriter>=3.1",
    "hypothesis>=6.0",
]
# CEN PCP/PID solution files are MS Access (.accdb) databases.  The
# Python wrapper `pandas-access` shells out to the `mdb-tools` system
# package — it is NOT pip-installable, so document it here and install
# it via the OS package manager:
#
#   sudo apt-get install -y mdbtools          # Debian/Ubuntu
#   brew install mdbtools                      # macOS
#   conda install -c conda-forge mdbtools      # conda env
#
# Without `mdbtools` on $PATH, `cen2gtopt.pcp_solution` raises a
# clear error pointing back to this comment.
mdb = [
    "pandas-access>=0.0.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "gtopt_warmstart*","gtopt_compare*", "cvs2parquet*", "gtopt_diagram*", "gtopt_field_extractor*", "gtopt_check_lp*", "gtopt_check_output*", "gtopt_check_pampl*", "gtopt_compress_lp*", "gtopt_check_json*", "gtopt_check_solvers*", "gtopt_check_topology*", "gtopt_config*", "gtopt_check_fingerprint*", "gtopt_expand*", "gtopt_shared*", "igtopt*", "nrel118_to_gtopt*", "plp2gtopt*", "plp_compress_case*", "plexos_compress_case*", "plexos2gtopt*", "pp2gtopt*", "gtopt2pp*", "rts_gmlc_to_gtopt*", "run_gtopt*", "gtopt_monitor*", "ts2gtopt*", "cen_demanda*", "gtopt_results_summary*", "gtopt_timeseries_export*", "sddp2gtopt*", "psse2gtopt*", "gtopt_canonical_feed*", "gtopt_marginal_units*", "cen2gtopt*", "gtopt_reduce_network*", "gtopt2pbi*", "sienna_to_gtopt*"]

[tool.setuptools.package-data]
# Non-Python assets that must ship in wheels (pip install ./scripts).
# plp2gtopt bundles the RoR equivalence whitelist used by
# --ror-as-reservoirs; gtopt_expand bundles the PAMPL/TSON templates
# used to generate Laja/Maule irrigation agreements and LNG expansions.
"plp2gtopt.templates" = ["*.csv", "*.md"]
"gtopt_shared.data" = ["*.json"]
"gtopt_expand.templates" = ["*.tampl", "*.tson", "*.md"]


# ---------------------------------------------------------------------------
# Tool configuration (mirrors root pyproject.toml, scoped to scripts/)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = [
    "gtopt_warmstart/tests",
    "gtopt_compare/tests",
    "cvs2parquet/tests",
    "gtopt_diagram/tests",
    "gtopt_field_extractor/tests",
    "gtopt_check_lp/tests",
    "gtopt_compress_lp/tests",
    "gtopt_check_fingerprint/tests",
    "gtopt_check_json/tests",
    "gtopt_check_topology/tests",
    "gtopt_check_pampl/tests",
    "gtopt_check_solvers/tests",
    "gtopt_expand/tests",
    "gtopt_shared/tests",
    "gtopt_results_summary/tests",
    "gtopt_timeseries_export/tests",
    "gtopt2pp/tests",
    "gtopt2pbi/tests",
    "igtopt/tests",
    "plp2gtopt/tests",
    "pp2gtopt/tests",
    "plexos2gtopt/tests",
    "sddp2gtopt/tests",
    "psse2gtopt/tests",
    "gtopt_monitor/tests",
    "gtopt_config/tests",
    "gtopt_check_output/tests",
    "run_gtopt/tests",
    "ts2gtopt/tests",
    "gtopt_canonical_feed/tests",
    "gtopt_marginal_units/tests",
    "cen2gtopt/tests",
    "gtopt_reduce_network/tests",
    "plexos_compress_case/tests",
    "sienna_to_gtopt/tests",
]
addopts = "-v --import-mode=importlib -n auto"
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that use sample PLP case files",
    "slow: tests that take >60s (pandapower full-network conversion, etc.)",
]

[tool.coverage.run]
source = [
    "gtopt_warmstart","gtopt_compare", "cvs2parquet", "gtopt_diagram", "gtopt_field_extractor", "gtopt2pp", "gtopt2pbi", "gtopt_expand", "gtopt_results_summary", "gtopt_timeseries_export", "igtopt", "plp2gtopt", "pp2gtopt", "plexos2gtopt", "sddp2gtopt", "psse2gtopt", "gtopt_monitor", "ts2gtopt", "gtopt_canonical_feed", "gtopt_marginal_units", "cen2gtopt", "gtopt_reduce_network"]
omit = ["*/test*", "*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
show_missing = true
precision = 1
fail_under = 83
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
]

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["cvs2parquet", "gtopt_compare", "gtopt_diagram", "gtopt_field_extractor", "gtopt2pp", "gtopt2pbi", "gtopt_check_json", "gtopt_check_lp", "gtopt_check_output", "gtopt_check_pampl", "gtopt_check_solvers", "gtopt_compress_lp", "gtopt_config", "gtopt_check_fingerprint", "gtopt_expand", "gtopt_results_summary", "gtopt_timeseries_export", "igtopt", "plp2gtopt", "plp_compress_case", "plexos_compress_case", "plexos2gtopt", "pp2gtopt", "run_gtopt", "gtopt_monitor", "sddp2gtopt", "psse2gtopt", "ts2gtopt", "gtopt_canonical_feed", "gtopt_marginal_units", "cen2gtopt", "gtopt_reduce_network"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pylint.main]
# pyarrow.compute is a C-extension module — its functions are exposed
# dynamically, so pylint can't statically resolve `pc.max`, `pc.sum`,
# `pc.multiply`, etc.  Tell pylint these members exist so it stops
# emitting spurious E1101 no-member errors on pyarrow.compute calls.
extension-pkg-allow-list = ["pyarrow.compute"]

[tool.pylint.typecheck]
# `pc.<func>` covers every pyarrow.compute function we actually use
# (abs, max, min, sum, count, drop_null, multiply, less, …).  Matched
# as a regex against the missing-attribute access.
generated-members = ["pc\\..*"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 12
max-locals = 25
max-branches = 16
max-statements = 60
max-attributes = 10
max-positional-arguments = 12

[tool.pylint."messages control"]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error",
    # pytest fixtures naturally shadow outer-scope names
    "redefined-outer-name",
    # global statement used deliberately for json_indent/json_separators
    "global-statement",
    # test helpers legitimately use implicit string concatenation for data
    "implicit-str-concat",
    # too-many-positional-arguments covered by max-args above
    "too-many-positional-arguments",
    # duplicate-code is noisy for test boilerplate and shared CLI argument patterns
    "duplicate-code",
    # protected-access is intentional in test helpers that set up internal state
    "protected-access",
    # optional-dependency imports (graphviz, pyvis, cairosvg) are intentionally
    # deferred to the functions that need them so the package works without them
    "import-outside-toplevel",
    # complex rendering/conversion functions in gtopt_diagram.py and plp2gtopt:
    # these match the thresholds already disabled in the root .pylintrc
    "too-many-statements",
    "too-many-locals",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-nested-blocks",
    "invalid-name",
    "too-many-lines",
    "too-many-instance-attributes",
    "too-many-public-methods",
    # tol_lmp is part of a uniform comparison-function API; some implementations
    # don't need it (e.g. 1-bus or battery cases without bus LMPs)
    "unused-argument",
    # plp2gtopt __init__ re-exports trigger false-positive cycle detection
    # when pylint scans all packages together
    "cyclic-import",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
exclude = ["tests/"]

# pyarrow.compute exposes its functions through a dynamic dispatch
# table that mypy can't statically resolve, generating spurious
# `attr-defined` errors on every `pc.max`, `pc.sum`, etc. callsite.
# Disable the check on the two modules that use `pc.*` directly so
# unrelated `attr-defined` bugs elsewhere still surface.
[[tool.mypy.overrides]]
module = ["gtopt_check_output._reader", "gtopt_check_output._checks"]
disable_error_code = ["attr-defined"]
